--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,243 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <title>React + Spring</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="css.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
 </head>
 <body>
+<div class="photo-preview">
+    <div class="full-width-thumbnail crop-center-photo">
+        <img src="../images/main_preview.jpg" alt="Responsive image">
+        <div class="caption text-center">
+            <div class="large-bold-text">Maria Album</div>
+            <div class="small-text">Lorem ipsum dolor sit amet, fuisset argumentum pro id</div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="offset-lg-1 col-lg-10">
+            <div class="row">
+                <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
+                    <div class="thumb-photo crop-center-photo">
+                        <div class="photo-cover">
+                            <img src="../images/1.jpg" alt="Responsive image">
+                        </div>
+                        <div class="thumb-info text-center">
+                            <div class="thumb-info-name text-truncate">
+                                Get Started with Your Forum
+                            </div>
+                            <div class="thumb-info-meta">
+                                325 likes | 25 images
+                            </div>
+                            <div class="thumb-info-description d-none d-md-block">
+                                Вот это жесть dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-5 col-md-6 col-sm-12">
+                    <div class="thumb-photo crop-center-photo">
+                        <div class="photo-cover">
+                            <img src="../images/7.jpg" alt="Responsive image">
+                        </div>
+                        <div class="thumb-info text-center">
+                            <div class="thumb-info-name text-truncate">
+                                Excepteur sint occaecat
+                            </div>
+                            <div class="thumb-info-meta">
+                                283 likes | 13 images
+                            </div>
+                            <div class="thumb-info-description d-none d-md-block">
+                                Sed ut perspiciatis unde omnis iste natus error sit
+                                voluptatem accusantium doloremque laudantium, totam rem
+                                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
+                    <div class="thumb-photo crop-center-photo">
+                        <div class="photo-cover">
+                            <img src="../images/3.jpg" alt="Responsive image">
+                        </div>
+                        <div class="thumb-info text-center">
+                            <div class="thumb-info-name text-truncate">
+                                Nemo enim ipsam
+                            </div>
+                            <div class="thumb-info-meta">
+                                11 likes | 5 images
+                            </div>
+                            <div class="thumb-info-description d-none d-md-block">
+                                Ut enim ad minima veniam, quis nostrum exercitationem
+                                ullam consequatur?
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-5 col-md-6 col-sm-12">
+                    <div class="thumb-photo crop-center-photo">
+                        <div class="photo-cover">
+                            <img src="../images/6.jpg" alt="Responsive image">
+                        </div>
+                        <div class="thumb-info text-center">
+                            <div class="thumb-info-name text-truncate">
+                                Quis autem vel eum
+                            </div>
+                            <div class="thumb-info-meta">
+                                283 likes | 13 images
+                            </div>
+                            <div class="thumb-info-description d-none d-md-block">
+                                Sed ut perspiciatis unde omnis iste natus error sit
+                                voluptatem accusantium doloremque laudantium, totam rem
+                                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
+                    <div class="thumb-photo crop-center-photo">
+                        <div class="photo-cover">
+                            <img src="../images/5.jpg" alt="Responsive image">
+                        </div>
+                        <div class="thumb-info text-center">
+                            <div class="thumb-info-name text-truncate">
+                                Nor again is there anyone
+                            </div>
+                            <div class="thumb-info-meta">
+                                211 likes | 7 images
+                            </div>
+                            <div class="thumb-info-description d-none d-md-block">
+                                Et harum quidem rerum facilis est et expedita distinctio.
+                                Nam libero tempore, cum
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="footer d-flex align-items-center">
+    <div class="container">
+        <div class="row">
+            <div class="offset-lg-1 col-lg-10">
+                <div class="row d-flex align-items-center">
+                    <div class="offset-lg-1 col-lg-4 col-md-4 col-sm-6 col-4 d-inline-block align-middle">
+                        Subscribe me everywhere
+                    </div>
+                    <ul class="offset-lg-3 offset-md-4
+                               col-lg-3 col-md-4 col-sm-6 col-8
+                               list-inline text-right">
+                        <li class="list-inline-item">
+                            <div class="social-icon">
+                                <img src="../images/socials/youtube.svg">
+                            </div>
+                        </li>
+                        <li class="list-inline-item">
+                            <div class="social-icon">
+                                <img src="../images/socials/instagram.svg">
+                            </div>
+                        </li>
+                        <li class="list-inline-item">
+                            <div class="social-icon">
+                                <img src="../images/socials/vk.svg">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<script>
+    // debugger;
+    var tt = $(".photo-cover");
+    tt.each(function (i, el) {
+        applyPortrait(el);
+        // debugger;
+    });
+
+    $(window).resize(function () {
+        var tt = $(".photo-cover");
+        tt.each(function (i, el) {
+            applyPortrait(el);
+            // debugger;
+        });
+
+        var thumbDescr = $(".thumb-info-description");
+        thumbDescr.each(function (i, el) {
+            var wordArray = el.innerHTML.split(' ');
+            while (el.scrollHeight > el.offsetHeight) {
+                wordArray.pop();
+                el.innerHTML = wordArray.join(' ') + '...';
+            }
+        });
+    });
+
+    function applyPortrait(el) {
+        var img = $(el).find('img');
+        // if ($(window).width() < 768) {
+        //     $(el).height($(el).height() + 30)
+        // } else {
+        //     $(el).height($(el).height() - 30)
+        // }
+        var imgRatio = $(img).width() / $(img).height();
+        var elRatio = $(el).width() / $(el).height();
+
+        // if (elRatio < 1.4) {
+        //     $(el).height($(el).height() - 50)
+        // } else {
+        //     $(el).height($(el).height() + 50)
+        // }
+
+        elRatio = $(el).width() / $(el).height();
+
+        if (imgRatio < elRatio) {
+            $(img).addClass('portrait');
+        } else {
+            $(img).removeClass('portrait');
+        }
+
+
+    }
+
+    var thumbDescr = $(".thumb-info-description");
+    thumbDescr.each(function (i, el) {
+        var wordArray = el.innerHTML.split(' ');
+        while (el.scrollHeight > el.offsetHeight) {
+            wordArray.pop();
+            el.innerHTML = wordArray.join(' ') + '...';
+        }
+    });
+</script>
 </body>
 </html>
