Split to different modules

--- a/frontend-part/src/main/resources/static/index.html
+++ b/frontend-part/src/main/resources/static/index.html
@@ -16,10 +16,10 @@
 <body>
 <div class="photo-preview">
     <div class="full-width-thumbnail crop-center-photo">
-        <img src="../images/main_preview.jpg" class="portrait" alt="Responsive image">
+        <img src="../../../../frontend-part/src/main/resources/images/main_preview.jpg" class="portrait" alt="Responsive image">
         <div class="caption text-center">
             <div class="large-bold-text">Maria Album</div>
-            <div class="small-text">Lorem ipsum dolor sit amet, fuisset argumentum pro id</div>
+            <div class="small-text d-none d-lg-block">Lorem ipsum dolor sit amet, fuisset argumentum pro id</div>
         </div>
     </div>
 </div>
@@ -31,7 +31,7 @@
                 <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../images/1.jpg" alt="Responsive image">
+                            <img src="../../../../frontend-part/src/main/resources/images/1.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
@@ -51,7 +51,7 @@
                 <div class="col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../images/7.jpg" alt="Responsive image">
+                            <img src="../../../../frontend-part/src/main/resources/images/7.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
@@ -72,7 +72,7 @@
                 <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../images/3.jpg" alt="Responsive image">
+                            <img src="../../../../frontend-part/src/main/resources/images/3.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
@@ -92,7 +92,7 @@
                 <div class="col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../images/6.jpg" alt="Responsive image">
+                            <img src="../../../../frontend-part/src/main/resources/images/6.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
@@ -113,7 +113,7 @@
                 <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../images/5.jpg" alt="Responsive image">
+                            <img src="../../../../frontend-part/src/main/resources/images/5.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
@@ -147,13 +147,13 @@
                                 col-lg-3 col-md-4 col-sm-4 col-6 text-right">
                         <div class="d-flex justify-content-end">
                             <div class="social-icon d-inline-block">
-                                <img src="../images/socials/youtube.svg">
+                                <img src="../../../../frontend-part/src/main/resources/images/socials/youtube.svg">
                             </div>
                             <div class="social-icon d-inline-block">
-                                <img src="../images/socials/instagram.svg">
+                                <img src="../../../../frontend-part/src/main/resources/images/socials/instagram.svg">
                             </div>
                             <div class="social-icon d-inline-block">
-                                <img src="../images/socials/vk.svg">
+                                <img src="../../../../frontend-part/src/main/resources/images/socials/vk.svg">
                             </div>
                         </div>
                     </div>
