--- a/frontend-part/src/main/resources/static/index.html
+++ b/frontend-part/src/main/resources/static/index.html
@@ -16,10 +16,16 @@
 <body>
 <div class="photo-preview">
     <div class="full-width-thumbnail crop-center-photo">
-        <img src="../../../../frontend-part/src/main/resources/images/main_preview.jpg" class="portrait" alt="Responsive image">
-        <div class="caption text-center">
-            <div class="large-bold-text">Maria Album</div>
-            <div class="small-text d-none d-lg-block">Lorem ipsum dolor sit amet, fuisset argumentum pro id</div>
+        <img src="../images/main_preview.jpg" class="portrait" alt="Responsive image">
+        <div class="container">
+            <div class="row">
+                <div class="caption text-center col-12">
+                    <div class="large-bold-text">Maria Album</div>
+                    <div class="small-text">Lorem ipsum dolor sit amet, fuisset argumentum
+                        proid
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -31,18 +37,22 @@
                 <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../../../../frontend-part/src/main/resources/images/1.jpg" alt="Responsive image">
+                            <div class="photo-count d-flex align-items-center justify-content-end">
+                                25 images
+                            </div>
+                            <img src="../images/1.jpg" alt="Responsive image">
                         </div>
+
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
                                 Get Started with Your Forum
                             </div>
-                            <div class="thumb-info-meta">
-                                325 likes | 25 images
-                            </div>
-                            <div class="thumb-info-description d-none d-md-block">
+                            <div class="thumb-info-description">
                                 Вот это жесть dolor sit amet, consectetur adipiscing elit,
                                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                            </div>
+                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                                View
                             </div>
                         </div>
                     </div>
@@ -51,39 +61,46 @@
                 <div class="col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../../../../frontend-part/src/main/resources/images/7.jpg" alt="Responsive image">
+                            <div class="photo-count d-flex align-items-center justify-content-end">
+                                25 images
+                            </div>
+                            <img src="../images/7.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
                                 Excepteur sint occaecat
                             </div>
-                            <div class="thumb-info-meta">
-                                283 likes | 13 images
-                            </div>
-                            <div class="thumb-info-description d-none d-md-block">
+                            <div class="thumb-info-description">
                                 Sed ut perspiciatis unde omnis iste natus error sit
                                 voluptatem accusantium doloremque laudantium, totam rem
                                 aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                            </div>
+                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                                View
                             </div>
                         </div>
                     </div>
                 </div>
 
+
                 <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../../../../frontend-part/src/main/resources/images/3.jpg" alt="Responsive image">
+                            <div class="photo-count d-flex align-items-center justify-content-end">
+                                25 images
+                            </div>
+                            <img src="../images/3.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
                                 Nemo enim ipsam
                             </div>
-                            <div class="thumb-info-meta">
-                                11 likes | 5 images
-                            </div>
-                            <div class="thumb-info-description d-none d-md-block">
+                            <div class="thumb-info-description">
                                 Ut enim ad minima veniam, quis nostrum exercitationem
                                 ullam consequatur?
+                            </div>
+                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                                View
                             </div>
                         </div>
                     </div>
@@ -92,19 +109,22 @@
                 <div class="col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../../../../frontend-part/src/main/resources/images/6.jpg" alt="Responsive image">
+                            <div class="photo-count d-flex align-items-center justify-content-end">
+                                25 images
+                            </div>
+                            <img src="../images/6.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
                                 Quis autem vel eum
                             </div>
-                            <div class="thumb-info-meta">
-                                283 likes | 13 images
-                            </div>
-                            <div class="thumb-info-description d-none d-md-block">
+                            <div class="thumb-info-description">
                                 Sed ut perspiciatis unde omnis iste natus error sit
                                 voluptatem accusantium doloremque laudantium, totam rem
                                 aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                            </div>
+                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                                View
                             </div>
                         </div>
                     </div>
@@ -113,18 +133,21 @@
                 <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
                     <div class="thumb-photo crop-center-photo">
                         <div class="photo-cover">
-                            <img src="../../../../frontend-part/src/main/resources/images/5.jpg" alt="Responsive image">
+                            <div class="photo-count d-flex align-items-center justify-content-end">
+                                25 images
+                            </div>
+                            <img src="../images/5.jpg" alt="Responsive image">
                         </div>
                         <div class="thumb-info text-center">
                             <div class="thumb-info-name text-truncate">
                                 Nor again is there anyone
                             </div>
-                            <div class="thumb-info-meta">
-                                211 likes | 7 images
-                            </div>
-                            <div class="thumb-info-description d-none d-md-block">
+                            <div class="thumb-info-description">
                                 Et harum quidem rerum facilis est et expedita distinctio.
                                 Nam libero tempore, cum
+                            </div>
+                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                                View
                             </div>
                         </div>
                     </div>
@@ -147,13 +170,13 @@
                                 col-lg-3 col-md-4 col-sm-4 col-6 text-right">
                         <div class="d-flex justify-content-end">
                             <div class="social-icon d-inline-block">
-                                <img src="../../../../frontend-part/src/main/resources/images/socials/youtube.svg">
+                                <img src="../images/socials/youtube.svg">
                             </div>
                             <div class="social-icon d-inline-block">
-                                <img src="../../../../frontend-part/src/main/resources/images/socials/instagram.svg">
+                                <img src="../images/socials/instagram.svg">
                             </div>
                             <div class="social-icon d-inline-block">
-                                <img src="../../../../frontend-part/src/main/resources/images/socials/vk.svg">
+                                <img src="../images/socials/vk.svg">
                             </div>
                         </div>
                     </div>
