Rewriting footer/header to React

--- a/frontend-part/src/main/resources/static/index.html
+++ b/frontend-part/src/main/resources/static/index.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
 </head>
 <body>
-<div class="photo-preview">
-    <div class="full-width-thumbnail crop-center-photo">
-        <img src="../images/main_preview.jpg" class="portrait" alt="Responsive image">
+
+<div class="header">
+    <div class="crop-center-photo">
         <div class="container">
             <div class="row">
-                <div class="caption text-center col-12">
+                <div class="caption text-center">
                     <div class="large-bold-text">Maria Album</div>
                     <div class="small-text">Lorem ipsum dolor sit amet, fuisset argumentum
                         proid
@@ -27,129 +27,125 @@
                 </div>
             </div>
         </div>
+        <img src="../images/main_preview.jpg" class="portrait" alt="Responsive image">
     </div>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="offset-lg-1 col-lg-10">
-            <div class="row">
-                <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
-                    <div class="thumb-photo crop-center-photo">
-                        <div class="photo-cover">
-                            <div class="photo-count d-flex align-items-center justify-content-end">
-                                25 images
-                            </div>
-                            <img src="../images/1.jpg" alt="Responsive image">
-                        </div>
-
-                        <div class="thumb-info text-center">
-                            <div class="thumb-info-name text-truncate">
-                                Get Started with Your Forum
-                            </div>
-                            <div class="thumb-info-description">
-                                Вот это жесть dolor sit amet, consectetur adipiscing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                            </div>
-                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
-                                View
-                            </div>
-                        </div>
+        <div class="offset-lg-1 col-lg-5 offset-md-1 col-md-10">
+            <div class="thumb-photo crop-center-photo">
+                <div class="photo-cover">
+                    <div class="photo-count d-flex align-items-center justify-content-end">
+                        25 images
                     </div>
+                    <img src="../images/1.jpg" alt="Responsive image">
                 </div>
 
-                <div class="col-lg-5 col-md-6 col-sm-12">
-                    <div class="thumb-photo crop-center-photo">
-                        <div class="photo-cover">
-                            <div class="photo-count d-flex align-items-center justify-content-end">
-                                25 images
-                            </div>
-                            <img src="../images/7.jpg" alt="Responsive image">
-                        </div>
-                        <div class="thumb-info text-center">
-                            <div class="thumb-info-name text-truncate">
-                                Excepteur sint occaecat
-                            </div>
-                            <div class="thumb-info-description">
-                                Sed ut perspiciatis unde omnis iste natus error sit
-                                voluptatem accusantium doloremque laudantium, totam rem
-                                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-                            </div>
-                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
-                                View
-                            </div>
-                        </div>
+                <div class="thumb-info text-center">
+                    <div class="thumb-info-name text-truncate">
+                        Get Started with Your Forum
+                    </div>
+                    <div class="thumb-info-description">
+                        Вот это жесть dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </div>
+                    <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                        View
                     </div>
                 </div>
+            </div>
+        </div>
 
-
-                <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
-                    <div class="thumb-photo crop-center-photo">
-                        <div class="photo-cover">
-                            <div class="photo-count d-flex align-items-center justify-content-end">
-                                25 images
-                            </div>
-                            <img src="../images/3.jpg" alt="Responsive image">
-                        </div>
-                        <div class="thumb-info text-center">
-                            <div class="thumb-info-name text-truncate">
-                                Nemo enim ipsam
-                            </div>
-                            <div class="thumb-info-description">
-                                Ut enim ad minima veniam, quis nostrum exercitationem
-                                ullam consequatur?
-                            </div>
-                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
-                                View
-                            </div>
-                        </div>
+        <div class="offset-lg-0 col-lg-5 offset-md-1 col-md-10">
+            <div class="thumb-photo crop-center-photo">
+                <div class="photo-cover">
+                    <div class="photo-count d-flex align-items-center justify-content-end">
+                        25 images
+                    </div>
+                    <img src="../images/7.jpg" alt="Responsive image">
+                </div>
+                <div class="thumb-info text-center">
+                    <div class="thumb-info-name text-truncate">
+                        Excepteur sint occaecat
+                    </div>
+                    <div class="thumb-info-description">
+                        Sed ut perspiciatis unde omnis iste natus error sit
+                        voluptatem accusantium doloremque laudantium, totam rem
+                        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                    </div>
+                    <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                        View
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="col-lg-5 col-md-6 col-sm-12">
-                    <div class="thumb-photo crop-center-photo">
-                        <div class="photo-cover">
-                            <div class="photo-count d-flex align-items-center justify-content-end">
-                                25 images
-                            </div>
-                            <img src="../images/6.jpg" alt="Responsive image">
-                        </div>
-                        <div class="thumb-info text-center">
-                            <div class="thumb-info-name text-truncate">
-                                Quis autem vel eum
-                            </div>
-                            <div class="thumb-info-description">
-                                Sed ut perspiciatis unde omnis iste natus error sit
-                                voluptatem accusantium doloremque laudantium, totam rem
-                                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-                            </div>
-                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
-                                View
-                            </div>
-                        </div>
+        <div class="offset-lg-1 col-lg-5 offset-md-1 col-md-10">
+            <div class="thumb-photo crop-center-photo">
+                <div class="photo-cover">
+                    <div class="photo-count d-flex align-items-center justify-content-end">
+                        25 images
+                    </div>
+                    <img src="../images/3.jpg" alt="Responsive image">
+                </div>
+                <div class="thumb-info text-center">
+                    <div class="thumb-info-name text-truncate">
+                        Nemo enim ipsam
+                    </div>
+                    <div class="thumb-info-description">
+                        Ut enim ad minima veniam, quis nostrum exercitationem
+                        ullam consequatur?
+                    </div>
+                    <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                        View
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="offset-lg-1 col-lg-5 col-md-6 col-sm-12">
-                    <div class="thumb-photo crop-center-photo">
-                        <div class="photo-cover">
-                            <div class="photo-count d-flex align-items-center justify-content-end">
-                                25 images
-                            </div>
-                            <img src="../images/5.jpg" alt="Responsive image">
-                        </div>
-                        <div class="thumb-info text-center">
-                            <div class="thumb-info-name text-truncate">
-                                Nor again is there anyone
-                            </div>
-                            <div class="thumb-info-description">
-                                Et harum quidem rerum facilis est et expedita distinctio.
-                                Nam libero tempore, cum
-                            </div>
-                            <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
-                                View
-                            </div>
-                        </div>
+        <div class="offset-lg-0 col-lg-5 offset-md-1 col-md-10">
+            <div class="thumb-photo crop-center-photo">
+                <div class="photo-cover">
+                    <div class="photo-count d-flex align-items-center justify-content-end">
+                        25 images
+                    </div>
+                    <img src="../images/6.jpg" alt="Responsive image">
+                </div>
+                <div class="thumb-info text-center">
+                    <div class="thumb-info-name text-truncate">
+                        Quis autem vel eum
+                    </div>
+                    <div class="thumb-info-description">
+                        Sed ut perspiciatis unde omnis iste natus error sit
+                        voluptatem accusantium doloremque laudantium, totam rem
+                        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                    </div>
+                    <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                        View
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="offset-lg-1 col-lg-5 offset-md-1 col-md-10">
+            <div class="thumb-photo crop-center-photo">
+                <div class="photo-cover">
+                    <div class="photo-count d-flex align-items-center justify-content-end">
+                        25 images
+                    </div>
+                    <img src="../images/5.jpg" alt="Responsive image">
+                </div>
+                <div class="thumb-info text-center">
+                    <div class="thumb-info-name text-truncate">
+                        Nor again is there anyone
+                    </div>
+                    <div class="thumb-info-description">
+                        Et harum quidem rerum facilis est et expedita distinctio.
+                        Nam libero tempore, cum
+                    </div>
+                    <div class="thumb-info-button mx-auto d-flex align-items-center justify-content-center">
+                        View
                     </div>
                 </div>
             </div>
@@ -157,7 +153,7 @@
     </div>
 </div>
 
-<footer class="footer d-flex align-items-center">
+<div class="footer d-flex align-items-center">
     <div class="container">
         <div class="row">
             <div class="offset-lg-1 col-lg-10">
@@ -184,7 +180,7 @@
             </div>
         </div>
     </div>
-</footer>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
