--- a/frontend-part/react-app/public/index.html
+++ b/frontend-part/react-app/public/index.html
@@ -21,7 +21,7 @@
     -->
 
     <!-- Montserrat font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,600,700" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
