Adding loading header from VK

--- a/frontend-part/react-app/public/index.html
+++ b/frontend-part/react-app/public/index.html
@@ -29,6 +29,9 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 
+    <!-- VK API -->
+    <script src="https://vk.com/js/api/openapi.js?154" type="text/javascript"></script>
+
     <title>React App</title>
 </head>
 <body>
@@ -62,6 +65,12 @@
         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous">
+</script>
+
+<script type="text/javascript">
+    VK.init({
+        apiId: 6603117
+    });
 </script>
 </body>
 </html>
